--- a/MyProject1/MyProject1.csproj
+++ b/MyProject1/MyProject1.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-	  <StartupObject>MyProject1.ForLoop</StartupObject>
+	  <StartupObject>MyProject1.PatternS</StartupObject>
   </PropertyGroup>
 
 </Project>
