--- a/MyProject1/MyProject1.csproj
+++ b/MyProject1/MyProject1.csproj
@@ -5,14 +5,17 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
 
-	  <StartupObject>MyProject1.ARRAYPrograms.PrimeList</StartupObject>
-	  
+	  <StartupObject>MyProject1.StringDEMO.StringDemo</StartupObject>
 	  
 	  
 
 
 
-</PropertyGroup>
+
+
+
+
+  </PropertyGroup>
 
 	
   <ItemGroup>
